--- a/style.css
+++ b/style.css
@@ -9,35 +9,333 @@
 
 
 body {
-    margin: 0;
+    margin: auto;
     padding: 0;
-    background-color: #f5f5f5;
+    /* background-color: #f5f5f5; */
+    background-color: white;
     font-family: 'Merriweather', serif;
     font-size: 16px;
     line-height: 1.6;
 }
 
-
 /* HLAVICKA */
 
 .titulek {
     font-family: 'Raleway', serif;
+    color: white;
+    padding-top: 30px;
 }
 
+.perex {
+  color: white;
+  padding: 20px;
+}
+
+.autor {
+  color: lightgrey;
+  padding-bottom: 40px;
+}
+
+.hlavicka {
+  width: 100%;
+  background-image: url(images/island-hlavicka.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  text-align: center;
+  position: relative; 
+  z-index: -1;
+}
+
+.hlavicka::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 100%;
+  background-color: darkgrey;
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0.3;
+  z-index: 0;
+}
+
+.hlavicka > * {
+  z-index: 10;
+  position: relative;
+}
+
+.obsah > * {
+  z-index: 10;
+  position: relative;
+}
+
+.autor::before{
+  content: "";
+  width: 100px;
+  height: 2px;
+  background-color: lightgrey;
+  display: block;
+  margin: auto;
+  margin-bottom: 20px;
+}
 
 /* MENU */
 
+.menu {
+  width: 100%;
+  text-align: center;
+  display: block;
+  padding: 20px;
+  background-color: white;
+}
 
+.menu li{
+  display: block;
+  text-transform: uppercase;
+  border-bottom: 0.5px solid lightgrey;
+}
 
+.menu a{
+  color: lightgrey;
+  text-decoration: none;
+  display: block;
+  padding: 5px;
+}
 
 /* OBSAH */
 
+section {
+  width: 100%;
+}
 
+p {
+  padding: 0 20px;
+}
 
+.uvod {
+  margin: 20px 0;
+}
+
+.fotobox img {
+  width: 100%;
+  margin-top: 20px;
+}
+
+.fotobox .popisek {
+  text-align: center;
+  color: grey;
+  margin: 0;
+}
+
+.fotobox a {
+  color: grey;
+}
+
+h2 {
+  padding: 20px;
+  margin: 0;
+}
+
+h2::after{
+    content: "";
+    width: 70px;
+    height: 4px;
+    background-color: lightblue;
+    display: block;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: -20px;
+}
 
 /* FOTOGALERIE */
 
+.fotogalerie img {
+  width: 100%;
+  margin-top: 20px;
+}
 
+.fotogalerie .popisek {
+  text-align: center;
+  color: grey;
+  margin: 0;
+  font-weight: 600;
+}
 
+.fotogalerie span {
+  font-weight: 400;
+}
+
+.fotogalerie a {
+  color: grey;
+}
 
 /* PATICKA */
+
+footer {
+  background-image: linear-gradient(lightgrey, white);
+  width: 100%;
+  padding: 20px;
+  margin-top: 20px;
+}
+
+footer p {
+  color: grey;
+}
+
+footer a {
+  color: grey;
+}
+
+/* tablety: */
+@media (min-width: 500px) {
+
+/* MENU */
+
+  .menu li {
+    display: inline-block;
+    border-bottom: none;
+  }
+
+  .menu a {
+    display: inline-block;
+    font-weight: 100;
+    padding: 10px 20px;
+  }
+
+  .menu {
+    padding: 0 20px;
+    margin: 20px;
+    border-top: 0.5px solid lightgrey;
+    border-bottom: 0.5px solid lightgrey;
+    font-size: 0.5rem;
+  }
+
+  .uvod_menu,
+  .doporuceni_menu,
+  .proc_menu {
+    border-right: 0.5px solid lightgrey;
+  }
+
+/* OBSAH */
+
+.fotobox {
+  position: relative;
+}
+
+.fotobox img {
+  z-index: -1;
+}
+
+.fotobox .popisek {
+  position: absolute;
+  bottom: 20px;
+  right: 0;
+  color: white;
+}
+
+.fotobox a {
+  color: white;
+}
+
+/* FOTOGALERIE */
+
+.foto .popisek {
+  background-color: rgba(0, 0, 0, 0.6);
+  color: white;
+  text-align: center;
+  padding: 10px 0;
+  position: absolute;
+  width: 100%;
+  transition: transform 500ms ease 0s; 
+}
+
+.foto a {
+  color: white;
+}
+
+.foto img {
+ width: 100%;
+ display: block;
+ transition: transform 500ms ease 0s;
+ margin-top: -20px;
+}
+
+.foto {
+ width: 50%;
+ position: relative;
+ overflow: hidden;
+ float: left;
+}
+
+.foto:hover .popisek { 
+ transform: translate(0, -100%);
+}
+
+.foto:hover img {
+ transform: scale(1.2);
+}
+
+/* PATIČKA */
+
+footer {
+  clear: left;
+}
+}
+
+/* notebook/pc: */
+@media (min-width: 1000px) {
+
+body {
+  background-color: #f5f5f5;
+}
+
+.obsah {
+  background-color: white;
+  width: 80%;
+  margin-left: 10%;
+  margin-top: -50px;
+  box-shadow: -5px -5px 20px 5px grey;
+}
+
+/* MENU */
+
+.menu{
+  width: 20%;
+  text-align: center;
+  display: block;
+  padding: 20px;
+  float: left;
+  border-top: none;
+  border-bottom: none;
+  font-size: 0.5rem;
+}
+
+.menu li{
+  display: block;
+  border-bottom: 0.5px solid lightgrey;
+}
+
+.menu a{
+  display: block;
+}
+
+.uvod_menu,
+.doporuceni_menu,
+.proc_menu {
+  border-right: none;
+  }
+
+/* OBSAH */
+
+.uvod p {
+  padding-top: 20px;
+  padding-left: 250px;
+}
+
+/* FOTOGALERIE */
+
+.foto {
+  width: 33.33%;
+}
+}
